@@ -114,8 +114,8 @@ cp apache-solr-$SOLR_VER/dist/apache-solr-clustering-$SOLR_VER.jar solr/dist
 cp -r apache-solr-$SOLR_VER/contrib solr/
 
 # copy accessfilterplugin
-mkdir solr/accessFilterPlugin
-cd solr/accessFilterPlugin
+mkdir solr/typo3
+cd solr/typo3
 if [ $BRANCH_TEST_RETURN -eq "0" ]
 then
 	wget --no-check-certificate https://svn.typo3.org/TYPO3v4/Extensions/solr/$SVNBRANCH_PATH/resources/solr/typo3-accessfilter-$EXT_SOLR_AFP_VER.jar
