@@ -59,7 +59,7 @@
   <lib dir="./contrib/clustering/lib/downloads/" />
   <lib dir="./contrib/clustering/lib/" />
   <lib dir="/total/crap/dir/ignored" />
-  <lib dir="./accessFilterPlugin/" />
+  <lib dir="./typo3/" />
   <!-- an exact path can be used to specify a specific file.  This will cause
        a serious error to be logged if it can't be loaded.
   <lib path="../a-jar-that-does-not-exist.jar" />
