@@ -1,6 +1,7 @@
 2010-09-15  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Changed version number to 1.2.0-preview
+	* Changed directory for TYPO3 Solr plugins in solrconfig.xml
 
 2010-09-15  Markus Goldbach  <markus.goldbach@dkd.de>
 
